reportlatency (1.0.1) precise; urgency=low

  * Added location.pl summary page

 -- Drake Diedrich <dld@google.com>  Tue, 11 Jun 2013 17:01:53 -0700

reportlatency (1.0.0) precise; urgency=low

  * Add JSON-RPC protocol for larger reports.  Not yet working.

 -- Drake Diedrich <dld@google.com>  Tue, 04 Jun 2013 12:47:36 -0700

reportlatency (0.10.1) precise; urgency=low

  * Report aggregate latency by location in service page

 -- Drake Diedrich <dld@google.com>  Thu, 16 May 2013 13:00:58 -0700

reportlatency (0.10.0) precise; urgency=low

  * Put reverse DNS subdomain in remote_addr field for each report if
    available, else the class C
  * Add location latency to summary page

 -- Drake Diedrich <dld@google.com>  Wed, 15 May 2013 14:43:51 -0700

reportlatency (0.9.3) precise; urgency=low

  * Direct insertion of exact hosts to tags table, rather than through
    much slower domain match table

 -- Drake Diedrich <dld@google.com>  Wed, 24 Apr 2013 12:29:04 -0700

reportlatency (0.9.2) precise; urgency=low

  * sqlite3 dependency at install and cron maintenance times
  * Add local-only apache2 conf.d file

 -- Drake Diedrich <dld@google.com>  Thu, 11 Apr 2013 17:03:00 -0700

reportlatency (0.9.0) unstable; urgency=low

  * First opensource release

 -- Drake Diedrich <dld@google.com>  Mon, 08 Apr 2013 13:48:16 -0700